kubernetes/clusters/my-cluster/kubernetes-native/spoolman/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spoolman-db
  namespace: spoolman
spec:
  selector:
    matchLabels:
      app: spoolman-db
  serviceName: spoolman-db
  replicas: 1
  template:
    metadata:
      labels:
        app: spoolman-db
    spec:
      containers:
      - name: spoolman-db
        image: postgres:14.18
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
          name: postgresdb-port
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumeClaimTemplates:
        - metadata:
            name: pgdata
          spec:
            accessModes: ["ReadWriteOnce"]
            resources:
              requests:
                storage: "1Gi"
