kubernetes/clusters/my-cluster/kubernetes-native/spoolman/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spoolman-ingress
  namespace: spoolman
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: spoolman.lan
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spoolman-service
            port:
              number: 7912
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spoolman-service
            port:
              number: 7912
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spoolman-ingress-route
  namespace: spoolman
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`spoolman.lan`)
      kind: Rule
      services:
        - name: spoolman-service
          port: 7912
